添加静态资源缓存设置
git-svn-id: svn://localhost/noc/trunk@185 626f0353-5094-f44b-bd95-4260a488012d

--- a/SimpleSample/htdocs/css/form_good.css
+++ b/SimpleSample/htdocs/css/form_good.css
@@ -262,7 +262,7 @@ table.popup a {
 }
 
 body {
-	background: url("/noc/css/images/nssl0013.jpg") repeat-y fixed;
+	background: url("/css/images/nssl0013.jpg") repeat-y fixed;
 	background-size: 100%;
 	background-color: yellow;
 	padding: 10px;
