--- a/SimpleSample/htdocs/css/form.css
+++ b/SimpleSample/htdocs/css/form.css
@@ -253,7 +253,7 @@ table.popup a {
 }
 
 body {
-	background: url("/noc/css/images/beauty.jpg") fixed;
+	background: url("/css/images/beauty.jpg") fixed;
 	background-size: 100%;
 	/*background-color: yellow;*/
 	padding: 10px;
