--- a/SimpleSample/htdocs/css/simpletree.css
+++ b/SimpleSample/htdocs/css/simpletree.css
@@ -5,7 +5,7 @@
 
 .treeview li {
 	/*Style for LI elements in general (excludes an LI that contains sub lists)*/
-	background: white url(/noc/images/list.gif) no-repeat left center;
+	background: white url(/images/list.gif) no-repeat left center;
 	list-style-type: none;
 	padding-left: 22px;
 	margin-bottom: 3px;
@@ -13,7 +13,7 @@
 
 .treeview li.submenu {
 	/* Style for LI that contains sub lists (other ULs). */
-	background: white url(/noc/images/closed.gif) no-repeat left 1px;
+	background: white url(/images/closed.gif) no-repeat left 1px;
 	cursor: hand !important;
 	cursor: pointer !important;
 }
