修改界面风格
git-svn-id: svn://localhost/noc/trunk@269 626f0353-5094-f44b-bd95-4260a488012d

--- a/noc-engine/src/main/resources/htdocs/css/plainform.css
+++ b/noc-engine/src/main/resources/htdocs/css/plainform.css
@@ -83,13 +83,11 @@ div.action {
 }
 
 div.action a {
-	display:block;
-	float:right;
-	right: 1em;
+	padding: .4em 1.2em;
 }
 
 div.action,table caption { /*transparent*/
-	background-color: silver;
+	background-color: #808080;
 	background-color: rgba(240, 240, 240, .6);
 }
 
