追加压缩文件逻辑,以减少传输内容,提高响应速度
git-svn-id: svn://localhost/noc/trunk@270 626f0353-5094-f44b-bd95-4260a488012d

--- a/noc-engine/src/main/resources/htdocs/css/plainform.css
+++ b/noc-engine/src/main/resources/htdocs/css/plainform.css
@@ -33,26 +33,33 @@ table {
 	background-color: rgba(240, 240, 240, .7);
 }
 
-table td.form {
-	width: 10em;
-}
-
 table td {
 	padding: 0em .4em;
 	border-bottom: lightgray 1px solid;
 }
 
+
+
 table th {
+	text-shadow: 2px 2px 3px #888888;
+	font-family: Arial;
+	font-size: 13px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: bold;
+}
+
+
+table thead th {
 	padding: .2em 0em;
 	border-bottom: gray 1px solid;
-	text-shadow: 2px 2px 3px #888888;
 }
 
-table.form td:FIRST-CHILD {
-	border: 0px;
+table tbody th{
+	text-align: left;
 }
 
-table.form td:FIRST-CHILD:after {
+table tbody th:after {
 	content: ':'
 }
 
@@ -74,12 +81,23 @@ input[readonly] {
 }
 
 input[type='submit'] {
-	padding: .4em 1.2em;
 	background-color: green;
+	width: 8em;
+	text-align: center;
+		
+	padding: .4em 2em;
+	margin: .4em 0em .6em 0em;
+}
+
+input[type='submit']:HOVER {
+	padding: .8em 2em 1em 2em;
+	margin: 0em;
+	font-weight: bolder;
+	cursor: pointer;
 }
 
 div.action {
-	padding: .6em .3em .6em 1em;
+	padding: .1em .3em .1em 1em;
 }
 
 div.action a {
@@ -91,7 +109,7 @@ div.action,table caption { /*transparent*/
 	background-color: rgba(240, 240, 240, .6);
 }
 
-div.action,table caption,table tbody, input[type='submit'] { /* radius */
+div.action,table caption,table tbody,input[type='submit'] { /* radius */
 	-moz-border-radius: 3px; /* FF1+ */
 	-webkit-border-radius: 3px; /* Saf3+, Chrome */
 	border-radius: 3px; /* Opera 10.5, IE 9 */
@@ -101,9 +119,9 @@ div.action,table caption,input[type='submit'] { /*  shadow*/
 	box-shadow: 2px 2px 3px #777;
 	-moz-box-shadow: 2px 2px 3px #777;
 	-webkit-box-shadow: 2px 2px 3px #777;
-	filter: progid :       DXImageTransform.Microsoft.Shadow (      
-		Strength = 
-		     2, Direction =       135, Color =       '#333333' );
+	filter: progid :         DXImageTransform.Microsoft.Shadow (       
+		 Strength =  
+		      2, Direction =         135, Color =         '#333333' );
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=135, Color='#333333')";
 }
