delete used file to decrese size

--- a/noc-engine/src/main/resources/htdocs/css/plainform.css
+++ b/noc-engine/src/main/resources/htdocs/css/plainform.css
@@ -5,7 +5,7 @@
 
 body {
 	padding: 1em;
-	background: url("/css/images/beauty.jpg") no-repeat;
+	background: url("/css/images/kapton_reflect.png") no-repeat;
 }
 
 table,tr,td {
